# GameOfLife

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  settings.hpp
lib/game/board/: BoardUpdater.cpp  BoardUpdater.hpp
lib/game/cells/: Cell.cpp  Cell.hpp  CellStorage.cpp  CellStorage.hpp
lib/game/drawer/: Drawer.cpp  Drawer.hpp
tests/: CMakeLists.txt  board-updater-tests.cpp  cell-tests.cpp  main.cpp
